--- a/css/blog.css
+++ b/css/blog.css
@@ -41,13 +41,13 @@
 
 #blog .wrapper .blog-info h2{
     font-size: 40px;
-    color: #fff;
+    color: #000;
     font-weight: 600;   
 }
 
 #blog .wrapper .blog-info h2 span{
     font-weight: 500;
-    color: #e6c611;
+    color: #ebaf0a;
 }
 
 #blog .wrapper .blog-info a{
