--- a/css/blog.css
+++ b/css/blog.css
@@ -93,7 +93,7 @@
 
 #blog .wrapper .card .card-header img{
     width: 100%;
-    height: 200px;
+    height: 250px;
     object-fit: cover;
     display: block;
 }
@@ -146,6 +146,10 @@
 
 #blog .wrapper .card .card-body .footer a{
     padding: 5px 10px;
-    background: #e6c611;
+    background: #4829f9;
     border-radius: 4px;
+}
+
+#blog .wrapper .card .card-body .footer i{
+    color: #fff;
 }
