--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,11 @@ main{
     pointer-events: auto;
     bottom: 30px;
 }
+
+.scroll-up-btn:hover{
+    background-color: #3013d3;
+    border-radius: 50%;
+}
 /*Fim do corpo da pagina*/
 /*Estilização do rodapé*/
 
