--- a/css/modal.css
+++ b/css/modal.css
@@ -1,77 +1,1 @@
-/* General Styles */
-  /* Button */
-  button {
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    margin: 10px;
-    transition: background-color 0.3s ease;
-  }
-  
-  button:hover {
-    background-color: #555;
-  }
-  
-  /* Modal Styles */
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    width: 90%;
-    max-width: 400px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  }
-  
-  .icon {
-    font-size: 50px;
-    color: yellow;
-    animation: pulse 1.5s infinite;
-  }
-  
-  @keyframes pulse {
-    0%, 100% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.2);
-    }
-  }
-  
-  .modal p {
-    margin: 15px 0;
-    font-size: 18px;
-    color: #000;
-  }
-  
-  .close-btn {
-    padding: 8px 16px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .close-btn:hover {
-    background-color: #555;
-  }
-  
+button{padding:10px 20px;font-size:16px;cursor:pointer;background-color:#333;color:#fff;border:none;border-radius:5px;margin:10px;transition:background-color 0.3s ease}button:hover{background-color:#555}.modal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgb(0 0 0 / .6);justify-content:center;align-items:center;z-index:1000}.modal-content{background-color:#fff;padding:20px;border-radius:8px;text-align:center;width:90%;max-width:400px;box-shadow:0 4px 6px rgb(0 0 0 / .2)}.icon{font-size:50px;color:#ff0;animation:pulse 1.5s infinite}@keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.2)}}.modal p{margin:15px 0;font-size:18px;color:#000}.close-btn{padding:8px 16px;background-color:#333;color:#fff;border:none;border-radius:5px;cursor:pointer;transition:background-color 0.3s ease}.close-btn:hover{background-color:#555}
