--- a/css/styleNew.css
+++ b/css/styleNew.css
@@ -1,6 +1,6 @@
 :root {
-    --primary: #131191;
-    --primary-dark: #0d0b6b;
+    --primary: #004aad;
+    --primary-dark: #004aad;
     --primary-light: #2a2aff;
     --text: #333333;
     --text-light: #f8f8f8;
